added multiple number calculations, delete and decimal features

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="screen-area"></div>
         <div class="button-area">
             <button class="misc" id="clear">AC</button>
+            <button class="misc" id="del">DEL</button>
             <button class="operator" id="divide">/</button>
             <button class="operator" id="multiply">*</button>
             <button class="operator" id="subtract">-</button>
@@ -31,6 +32,7 @@
             <button class="number" id="two">2</button>
             <button class="number" id="three">3</button>
             <button class="number" id="zero">0</button>
+            <button class="number" id="decimal">.</button>
         </div>
     </div>
 </body>
